--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body {
 }
 
 .container {
-  width: 400px;
+  text-align: center;
+  width: 90%;
   margin: 0 auto;
 }
 
@@ -18,6 +19,7 @@ input {
 }
 
 button {
+  margin: 10px 0px;
   width: 100px;
   background-color: #333;
   color: white;
